[package]
name = "firn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = { version = "0.9.0", features = ["chrono", "syntect"]}
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.8"
anyhow = "1.0"
clap =  "3.0.0-rc.11"
glob = "0.3.0"
rayon = "1.5"
chrono = "0.4"
slugify = "0.1.0"
sass-rs = "0.2"
# for server (borrowed from zola)
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs", "full"] }
warp = "0.3"
notify = "4"
