[package]
name = "mylib"
version = "0.1.0"
authors = ["Michiel Borkent <michielborkent@gmail.com>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.14.0"
heim = "0.0.10"
futures = "0.3.1"
orgize = "0.8.3"
serde_json = "1.0.48"
